--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ img{
 }
 main{
   padding: 10px;
-  max-width: 500px;
+  max-width: 700px;
   margin: 0 auto;
 }
 header{
@@ -35,14 +35,25 @@ header nav{
 
 div.post{
   display: grid;
-  grid-template-columns: 0.9fr 1.1fr;
+  grid-template-columns: 1fr;
+ 
   gap:20px;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 768px) {
+   div.post{
+    grid-template-columns: 0.9fr 1.1fr;
+   }
 }
 
 div.post div.texts h2{
   margin: 0;
+  
   font-size: 1.8rem;
+}
+div.post div.texts a{
+  text-decoration: none;
+  color: inherit;
 }
 div.post p.info{
   margin: 6px 0;
@@ -89,6 +100,6 @@ button{
   padding: 7px 0;
 
 }
-form h1{
+form.login h1, form.register h1{
   text-align: center;
 }
